# rtarot

./: .gitignore  Cargo.toml  README.txt  TODO.txt  clippy.toml
src/: card.rs  color.rs  color_value.rs  constants.rs  contract.rs  deck.rs  errors.rs  game.rs  game_distributed.rs  game_started.rs  handle.rs  helpers.rs  main.rs  mode.rs  normal.rs  options.rs  player.rs  player_in_game.rs  points.rs  role.rs  suit.rs  suit_value.rs  team.rs  traits.rs  trump.rs  trump_value.rs  turn.rs
