[package]
name = "rtarot"
description = "Tarot simulation"
default-run = "rtarot"
version = "0.1.0"
authors = ["Adrien Pensart <crunchengine@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
clap = { version = "4.0.4", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
rand_distr = "0.4.3"
derive_more = "0.99.17"
derive-new = "0.5.9"
itertools = "0.10"
strum = { version = "0.24", features = ["derive"] }
indoc = "1.0"
regex = "1"
colored = "2.0.0"
array-init = "2.0.1"
ordered-float = "3.2.0"
